# USASpending

./: .coverage  .coveragerc  .gitignore  README.md  __init__.py  conversion_config.yaml  deepdive.md  dummy_CSV_data.csv  example.env  logging_config.yaml  madeupcsv.csv  mypy.ini  process_transactions.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_test_analysis.bat  run_validation.py  sample_walkthrough.md  setup.py  setup_env.ps1  validate_config.py  yaml_migration_plan.md
analysis/: USA_Spending_Contractor_Analysis.html  USA_Spending_Contractor_Analysis.ipynb  USA_Spending_Summary_Analysis.ipynb  hide_code_cells.tplx  hide_tagged_cells.tplx
src/: convert_data_dictionary.py  process_transactions.py
tests/: benchmark_validation.py  conftest.py  test_adapters.py  test_agency_store.py  test_base_entity.py  test_boolean_adapters.py  test_chunked_writer.py  test_component_utils.py  test_config.py  test_config_provider.py  test_config_validation.py  test_dictionary.py  test_entities.py  test_entity_cache.py  test_entity_factory.py  test_entity_mapper.py  test_entity_mediator.py  test_entity_store.py  test_enum_adapters.py  test_field_dependencies.py  test_field_selector.py  test_file_utils.py  test_integration.py  test_logging_config.py  test_performance.py  test_process_transactions.py  test_processor.py  test_recipient_store.py  test_relationships.py  test_schema_mapping.py  test_transaction_store.py  test_type_converter.py  test_utils.py  test_validation.py  test_validation_base.py  test_validation_groups.py  test_validation_integration.py  test_validation_manager.py  test_validation_mediator.py  test_validation_rules.py  (+1 more)
tools/: _README.md  __init__.py  __main__.py  analyze_test_quality.py  cleanup_duplicate_files.py  common.py  functional_coverage_analyzer.py  generate_coverage.py  generate_test_coverage_dashboard.py  reports.py  run_tests.py  serve_dashboard.py  (+5 more)
(+137 files in other folders)
